--- a/TradeHubGui/Views/MarketScannerContentView.xaml
+++ b/TradeHubGui/Views/MarketScannerContentView.xaml
@@ -1,8 +1,12 @@
 ﻿<UserControl x:Class="TradeHubGui.Views.MarketScannerContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:conv="clr-namespace:TradeHubGui.Converters">
     
     <UserControl.Resources>
+        <conv:ProviderConnectionStatusToBoolConverter x:Key="ConnectionStatusToBool"/>
+        <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
+
         <ContextMenu  x:Key="RowContextMenu" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
             <MenuItem Header="Limit Order Book"
                       CommandParameter="{Binding}"
@@ -29,14 +33,28 @@
     </UserControl.Resources>
     
     <DockPanel Background="#FFEEEEEE">
-        
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
-            <Label Content="Symbol for scannig"/>
-            <TextBox Text="{Binding NewSymbol, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,10,0"/>
-            <Button Content="Add" Command="{Binding AddNewSymbolCommand}"/>
-        </StackPanel>
-        
-        <DataGrid x:Name="MarketDataGrid" Margin="1"
+
+        <Border DockPanel.Dock="Top" BorderBrush="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" BorderThickness="0,0,0,2">
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Margin="20,0,20,0">
+                    <!--<Label Content="Connection status:"/>-->
+                    <Border Padding="10,1,10,3" CornerRadius="3" VerticalAlignment="Center"
+                        Background="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" >
+                        <TextBlock Text="{Binding Provider.ConnectionStatus}" 
+                               Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
+                    <Label Content="Symbol for scannig:"/>
+                    <TextBox Text="{Binding NewSymbol, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,10,0"
+                     IsEnabled="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBool}}"/>
+                    <Button Content="Add" Command="{Binding AddNewSymbolCommand}"/>
+                </StackPanel>
+            </DockPanel>
+        </Border>
+
+        <DataGrid x:Name="MarketDataGrid" Margin="0,0,1,0"
                   ItemsSource="{Binding TickDetailsCollection}"
                   SelectedItem="{Binding SelectedTickDetail}"
                   SelectionMode="Single" 
