(TH-179) Added abstract presentation of opened scanner windows on Market Data Scanner dashboard

--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -10,6 +10,7 @@
                  WindowStartupLocation="CenterScreen"
                  Title="TradeHUB" 
                  Height="850" Width="1280"
+                 MinHeight="400" MinWidth="650"
                  NonActiveGlowBrush="Silver"
                  ShowIconOnTitleBar="True"
                  ShowTitleBar="True"
