--- a/TradeHubGui/Views/MarketScannerView.xaml
+++ b/TradeHubGui/Views/MarketScannerView.xaml
@@ -1,12 +1,15 @@
 ﻿<UserControl x:Class="TradeHubGui.Views.MarketScannerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ad="http://schemas.xceed.com/wpf/xaml/avalondock"
+             xmlns:conv="clr-namespace:TradeHubGui.Converters"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="900"
              Tag="MARKET DATA SCANNER">
+    <UserControl.Resources>
+        <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
+    </UserControl.Resources>
 
     <Grid Margin="20">
         <Border Style="{StaticResource ContentBorderStyle}"/>
@@ -17,7 +20,7 @@
             </Grid.RowDefinitions>
 
             <StackPanel HorizontalAlignment="Left">
-                <Button Margin="4" Height="{Binding}" Command="{Binding ShowNewMarketScannerWindowCommand}">
+                <Button Margin="10,10" Height="{Binding}" Command="{Binding ShowNewScannerWindowCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="24" Height="24" Source="{StaticResource imgMarketData}" Margin="0,4,10,4" />
                         <TextBlock Text="New market scanner" VerticalAlignment="Center" Foreground="{StaticResource BaseBrush3}" FontWeight="Bold"/>
@@ -25,7 +28,79 @@
                 </Button>
             </StackPanel>
 
-            <ItemsControl/>
+            <ItemsControl Grid.Row="1" ItemsSource="{Binding ScannerWindowViewModels}" Margin="100">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid MinWidth="300" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="4">
+                            <Button Height="{Binding}" 
+                                    Command="{Binding DataContext.FocusScannerWindowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" 
+                                    CommandParameter="{Binding Provider.ProviderName}">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="Button">
+                                        <Grid Name="PART_LayoutRoot" Opacity="1">
+                                            <Border Name="PART_ShadowBorder" Background="White">
+                                                <Border.Effect>
+                                                    <DropShadowEffect Opacity="0.3" ShadowDepth="2"/>
+                                                </Border.Effect>
+                                            </Border>
+
+                                            <DockPanel>
+                                                <Border Name="PART_Header" DockPanel.Dock="Top" Background="{StaticResource BaseBrush2}">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Image Width="18" Height="18" Source="{StaticResource imgMarketDataScanner}" Margin="4,2"/>
+                                                        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Left" Text="{Binding Provider.ProviderName, FallbackValue=Blackwood}" 
+                                                            FontWeight="Thin" FontSize="18" Foreground="{StaticResource WhiteBrush}" Margin="4,1,40,3" Typography.Capitals="SmallCaps"/>
+                                                    </StackPanel>
+                                                </Border>
+
+                                                <Border Background="WhiteSmoke">
+                                                    <TextBlock Text="{Binding Provider.ConnectionStatus, FallbackValue=Disconnected}" Foreground="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}, FallbackValue={StaticResource RedBrush}}" 
+                                                                FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Margin="20"/>
+                                                </Border>
+                                            </DockPanel>
+                                        </Grid>
+
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="PART_LayoutRoot" Property="Opacity" Value="1"/>
+                                                <Setter TargetName="PART_Header" Property="Background" Value="{StaticResource BaseBrush0}"/>
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" Value="True">
+                                                <Setter TargetName="PART_ShadowBorder" Property="Margin" Value="2,2,0,0"/>
+                                                <Setter TargetName="PART_ShadowBorder" Property="Effect">
+                                                    <Setter.Value>
+                                                        <DropShadowEffect Opacity="0.3" ShadowDepth="0"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <DataTrigger Binding="{Binding Path=IsMouseOver, ElementName=CloseScannerButton}" Value="True">
+                                                <Setter TargetName="PART_LayoutRoot" Property="Opacity" Value="1"/>
+                                                <Setter TargetName="PART_Header" Property="Background" Value="{StaticResource BaseBrush0}"/>
+                                            </DataTrigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                            
+                            <Button Name="CloseScannerButton" MinWidth="24" Style="{StaticResource ButtonToolBar}" Margin="0,3,3,0" BorderThickness="0"
+                                    Focusable="False" HorizontalAlignment="Right" VerticalAlignment="Top"
+                                    Command="{Binding DataContext.CloseScannerWindowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" 
+                                    CommandParameter="{Binding Provider.ProviderName}">
+                                <Button.ToolTip>
+                                    <ToolTip Content="{Binding Provider.ProviderName}" ContentStringFormat="{}Close Scanner Window {0}"/>
+                                </Button.ToolTip>
+                                <Image Width="10" Height="10" Margin="2" Source="{StaticResource imgClose}" UseLayoutRounding="True"/>
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
 
         </Grid>
     </Grid>
