--- a/TradeHubGui/Views/DashboardView.xaml
+++ b/TradeHubGui/Views/DashboardView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:conv="clr-namespace:TradeHubGui.Converters"
+             xmlns:views="clr-namespace:TradeHubGui.Views"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1200"
              Tag="DASHBOARD">
@@ -21,53 +22,8 @@
             <ColumnDefinition Width="0.4*" MinWidth="300"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0" >
-            <!--<Grid.RowDefinitions>
-                <RowDefinition MinHeight="80"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="0.42*" MinHeight="80"/>
-            </Grid.RowDefinitions>-->
-
-            <Grid Margin="20,20,5,20">
-                <Border Style="{StaticResource ContentBorderStyle}"/>
-                <DockPanel Margin="10">
-                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="PENDING ORDERS" Style="{StaticResource HeaderTextBlockStyle}"/>
-
-                    <DataGrid x:Name="PendingOrdersDataGrid" Margin="10"
-                            SelectionMode="Single" 
-                            IsTextSearchEnabled="True"
-                            IsSynchronizedWithCurrentItem="True"
-                            CanUserAddRows="False" CanUserDeleteRows="False"
-                            CanUserResizeRows="False" CanUserSortColumns="True"
-                            IsReadOnly="False"
-                            SelectionUnit="FullRow"
-                            AutoGenerateColumns="False"
-                            RowHeight="22">
-
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="Symbol" Width="*" Binding="{Binding Path=Symbol}" />
-                            <DataGridTextColumn Header="Buy" Width="*" Binding="{Binding Path=Buy}" />
-                            <DataGridTextColumn Header="Sell" Width="*" Binding="{Binding Path=Sell}" />
-                            <DataGridTextColumn Header="Position" Width="*" Binding="{Binding Path=Position}" />
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </DockPanel>
-            </Grid>
-
-            <!--<GridSplitter Grid.Row="1" ResizeDirection="Rows"/>
-
-            <Grid Grid.Row="2" Margin="20,5,5,20">
-                <Border Style="{StaticResource ContentBorderStyle}"/>
-                <DockPanel Margin="10">
-                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="LOG" Style="{StaticResource HeaderTextBlockStyle}"/>
-
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,20,0,0">
-                       
-                    </ScrollViewer>
-                </DockPanel>
-            </Grid>-->
-        </Grid>
-
+        <views:MarketScannerView/>
+        
         <GridSplitter Grid.Column="1" ResizeDirection="Columns" />
 
         <Grid Grid.Column="2" >
