--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -10,6 +10,7 @@
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+        <conv:StrategyIsSelectedToBrushConverter x:Key="IsSelectedToBrush"/>
         <conv:InstanceExecutionStatusToBrushConverter x:Key="StatusToBrush"/>
         <conv:InstanceExecutionStatusToBoolConverter x:Key="StatusToBool"/>
         <conv:InstanceExecutionStatusToVisibilityConverter x:Key="ExecutionStatusToVisibility"/>
@@ -47,13 +48,24 @@
                              SelectedItem="{Binding SelectedStrategy}" ItemsSource="{Binding Strategies}">
                         <ListBox.Resources>
                             <ResourceDictionary>
-                                <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                                <Style TargetType="{x:Type ListBoxItem}">
+                                    <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                                    <Setter Property="SnapsToDevicePixels" Value="true" />
+                                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    <Setter Property="Background" Value="Transparent" />
+                                    <Setter Property="BorderBrush" Value="Transparent" />
+                                    <Setter Property="Padding" Value="0" />
+                                    <Setter Property="MinHeight" Value="40" />
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                                 <Grid>
-                                                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="1" CornerRadius="0" />
-                                                    <ContentPresenter Name="Content" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="0" CornerRadius="0" />
+                                                    <ContentPresenter Name="Content" Margin="{TemplateBinding Padding}" 
+                                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                                                 </Grid>
                                                 <ControlTemplate.Triggers>
                                                     <Trigger Property="IsMouseOver" Value="true">
@@ -81,12 +93,15 @@
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <DockPanel Margin="0">
-                                    <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" VerticalAlignment="Center" Margin="14,2,0,4">
-                                        <TextBlock Text="{Binding Key}" FontSize="18" Opacity="0.7" Margin="0,0,4,0"/>
-                                        <TextBlock Text="{Binding Name}" FontWeight="SemiBold" FontSize="18"/>
-                                    </StackPanel>
+                                    <Border DockPanel.Dock="Left" Background="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Converter={StaticResource IsSelectedToBrush}}">
+                                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="14,2,14,4" >
+                                            <TextBlock Text="{Binding Key}" FontSize="18" Opacity="0.7" Margin="0,0,4,0"/>
+                                            <TextBlock Text="{Binding Name}" FontWeight="SemiBold" FontSize="18"/>
+                                        </StackPanel>
+                                    </Border>
 
-                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Converter={StaticResource BoolToVis}}">
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" 
+                                                Visibility="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Converter={StaticResource BoolToVis}}">
                                         <Button MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="10,0,2,0" Foreground="White"
                                                 Command="{Binding DataContext.ShowGeneticOptimizationWindowCommand, RelativeSource={RelativeSource AncestorType=ListBox}}">
                                             <StackPanel Orientation="Horizontal" Margin="4,0">
