--- a/TradeHubGui/Views/MarketScannerView.xaml
+++ b/TradeHubGui/Views/MarketScannerView.xaml
@@ -62,7 +62,7 @@
                                                     <Border Name="PART_Header" DockPanel.Dock="Top" Background="{StaticResource BaseBrush2}">
                                                         <StackPanel Orientation="Horizontal">
                                                             <Image Width="18" Height="18" Source="{StaticResource imgMarketDataScanner}" Margin="4,2"/>
-                                                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Left" Text="{Binding Provider.ProviderName, FallbackValue=Blackwood}" 
+                                                            <TextBlock Name="PART_HeaderText" VerticalAlignment="Center" HorizontalAlignment="Left" Text="{Binding Provider.ProviderName}" 
                                                                        FontWeight="Thin" FontSize="18" Foreground="{StaticResource WhiteBrush}" Margin="8,1,40,3" Typography.Capitals="SmallCaps"/>
                                                         </StackPanel>
                                                     </Border>
@@ -79,7 +79,7 @@
                                                                 </Border>
                                                             </StackPanel>
                                                             <TextBlock Text="{Binding Provider.ConnectionStatus, FallbackValue=Disconnected}" 
-                                                                       Foreground="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}, FallbackValue={StaticResource RedBrush}}" 
+                                                                       Foreground="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" 
                                                                        FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Margin="20"/>
                                                         </DockPanel>
                                                     </Border>
