--- a/TradeHubGui/Views/SendOrderWindow.xaml
+++ b/TradeHubGui/Views/SendOrderWindow.xaml
@@ -30,7 +30,7 @@
             <Label Content="Market data provider" />
             <ComboBox Name="MarketDataProvidersComboBox" FontWeight="Bold"
                       ItemsSource="{Binding Providers}" 
-                      SelectedItem="{Binding SelectedProvider}"
+                      SelectedItem="{Binding Provider}"
                       DisplayMemberPath="ProviderName"/>
             
             <Grid Margin="0,10,0,0">
