--- a/TradeHubGui/Views/OrdersView.xaml
+++ b/TradeHubGui/Views/OrdersView.xaml
@@ -1,12 +1,89 @@
 ﻿<UserControl x:Class="TradeHubGui.Views.OrdersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:conv="clr-namespace:TradeHubGui.Converters"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignHeight="800" d:DesignWidth="1250"
              Tag="ORDERS">
-    <Grid>
 
+    <UserControl.Resources>
+        <conv:OrderStatusToBrushConverter x:Key="OrderStatusToBrush"/>
+    </UserControl.Resources>
+
+    <Grid x:Name="ContentGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.3*" MinWidth="300"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.45*" MinWidth="300"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0" Margin="20,20,5,20">
+            <Border Style="{StaticResource ContentBorderStyle}"/>
+            <DockPanel Grid.Row="0" Margin="10">
+                <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="ACTIVE ORDERS" Style="{StaticResource HeaderTextBlockStyle}"/>
+
+                <DataGrid x:Name="ActiveOrdersDataGrid" Margin="10,20,10,10"
+                              ItemsSource="{Binding ActiveOrders}"
+                              SelectionMode="Single" 
+                              IsTextSearchEnabled="True"
+                              IsSynchronizedWithCurrentItem="True"
+                              CanUserAddRows="False" CanUserDeleteRows="False"
+                              CanUserResizeRows="False" CanUserSortColumns="True"
+                              IsReadOnly="True"
+                              SelectionUnit="FullRow"
+                              AutoGenerateColumns="False"
+                              RowHeight="22">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Symbol" Width="0.2*" Binding="{Binding Path=Symbol}" />
+                        <DataGridTextColumn Header="Buy" Width="0.2*" Binding="{Binding Path=Buy}" />
+                        <DataGridTextColumn Header="Sell" Width="0.2*" Binding="{Binding Path=Sell}" />
+                        <DataGridTextColumn Header="Position" Width="0.2*" Binding="{Binding Path=Position}" />
+                    </DataGrid.Columns>
+                </DataGrid>
+            </DockPanel>
+        </Grid>
+
+        <GridSplitter Grid.Column="1" ResizeDirection="Columns"/>
+
+        <Grid Grid.Column="2" Margin="5,20,20,20">
+            <Border Style="{StaticResource ContentBorderStyle}"/>
+            <DockPanel Grid.Row="0" Margin="10">
+                <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="{Binding SelectedOrderEntry.Symbol, StringFormat='Orders {0}', FallbackValue='Orders N/A'}" Style="{StaticResource HeaderTextBlockStyle}"/>
+
+                <DataGrid x:Name="OrdersDataGrid" Margin="10,20,10,10"
+                              ItemsSource="{Binding Orders}"
+                              SelectionMode="Single" 
+                              IsTextSearchEnabled="True"
+                              IsSynchronizedWithCurrentItem="True"
+                              CanUserAddRows="False" CanUserDeleteRows="False"
+                              CanUserResizeRows="False" CanUserSortColumns="True"
+                              IsReadOnly="True"
+                              SelectionUnit="FullRow"
+                              AutoGenerateColumns="False"
+                              RowHeight="22">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Order ID" Width="0.22*" Binding="{Binding Path=ID}" />
+                        <DataGridTextColumn Header="Side" Width="0.15*" Binding="{Binding Path=Side}" />
+                        <DataGridTextColumn Header="Type" Width="0.15*" Binding="{Binding Path=Type}" />
+                        <DataGridTextColumn Header="Price" Width="0.2*" Binding="{Binding Path=Price}" />
+                        <DataGridTextColumn Header="Quantity" Width="0.22*" Binding="{Binding Path=Quantity}" />
+                        <DataGridTextColumn Header="Time" Width="0.4*" Binding="{Binding Path=Time}" />
+                        <DataGridTemplateColumn Header="Status" Width="0.4*" SortMemberPath="Status">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                        <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+                                    </Border>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </DockPanel>
+        </Grid>
     </Grid>
 </UserControl>
