--- a/TradeHubGui/Views/SendOrderWindow.xaml
+++ b/TradeHubGui/Views/SendOrderWindow.xaml
@@ -4,13 +4,17 @@
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
                  xmlns:views="clr-namespace:TradeHubGui.Views"
+                 xmlns:conv="clr-namespace:TradeHubGui.Converters"
                  GlowBrush="Silver"
                  ShowInTaskbar="False"
                  WindowStartupLocation="CenterOwner"
                  Title="Send Order"
                  SizeToContent="WidthAndHeight"
                  MinWidth="580" MinHeight="460">
-
+    <mah:MetroWindow.Resources>
+        <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
+    </mah:MetroWindow.Resources>
+    
     <Grid Grid.IsSharedSizeScope="True" Background="White" VerticalAlignment="Center" MaxWidth="800">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,8 +27,16 @@
             <ColumnDefinition Width="Auto" SharedSizeGroup="gr1"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Margin="22,10,0,0" Text="{Binding SelectedTickDetail.Security.Symbol, FallbackValue=N/A}" TextAlignment="Center" MinWidth="72"
+        <TextBlock Margin="22,10,0,0" Text="{Binding OrderModel.Security.Symbol, FallbackValue=N/A}" TextAlignment="Center" MinWidth="72"
                        Style="{StaticResource HeaderTextBlockStyle}" FontWeight="Thin" FontSize="36"/>
+
+        <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Margin="0,10,22,0" Grid.Column="2">
+            <Border Padding="10,1,10,3" CornerRadius="3" VerticalAlignment="Top" Margin="0,20,0,0"
+                        Background="{Binding SelectedOrderExecutionProvider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" >
+                <TextBlock Text="{Binding SelectedOrderExecutionProvider.ConnectionStatus}"
+                               Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+            </Border>
+        </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="1" Margin="20,60,20,10">
             <Label Content="Order execution provider" />
