--- a/TradeHubGui/Views/NewMarketScannerWindow.xaml
+++ b/TradeHubGui/Views/NewMarketScannerWindow.xaml
@@ -1,16 +1,21 @@
 ﻿<mah:MetroWindow x:Class="TradeHubGui.Views.NewMarketScannerWindow"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                xmlns:views="clr-namespace:TradeHubGui.Views"
-                GlowBrush="Silver"
-                ShowInTaskbar="False"
-                WindowStartupLocation="CenterOwner"
-                Title="New Market Scanner"
-                Width="300"
-                SizeToContent="Height"
-                MinWidth="200" MinHeight="200">
-
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 xmlns:conv="clr-namespace:TradeHubGui.Converters"
+                 xmlns:views="clr-namespace:TradeHubGui.Views"
+                 GlowBrush="Silver"
+                 ShowInTaskbar="False"
+                 WindowStartupLocation="CenterOwner"
+                 Title="New Market Scanner"
+                 Width="300"
+                 SizeToContent="Height"
+                 MinWidth="200" MinHeight="200">
+    <mah:MetroWindow.Resources>
+        <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
+        <conv:ProviderConnectionStatusToImageConverter x:Key="ConnectionStatusToImage"/>
+    </mah:MetroWindow.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,10 +28,19 @@
 
         <StackPanel Grid.Row="1" Margin="12,5,12,20">
             <Label Content="Chose market data provider for scanning" Margin="0,0,0,4"/>
-            <ComboBox Name="MarketDataProvidersComboBox" FontWeight="Bold" Height="{Binding}"
+            <ComboBox Name="MarketDataProvidersComboBox" FontWeight="Bold" Height="26"
                       ItemsSource="{Binding MarketDataProviders}" 
-                      SelectedItem="{Binding SelectedMarketDataProvider}"
-                      DisplayMemberPath="ProviderName"/>
+                      SelectedItem="{Binding SelectedMarketDataProvider}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel Margin="0,2">
+                            <TextBlock DockPanel.Dock="Left" Text="{Binding ProviderName}" VerticalAlignment="Center"/>
+                            <TextBlock DockPanel.Dock="Left" Text="{Binding ConnectionStatus}" Foreground="{Binding ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" 
+                                        FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" Margin="0,0,0,2" HorizontalAlignment="Right" MinWidth="70"/>
+                        </DockPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </StackPanel>
 
         <StackPanel Grid.Row="2" Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
