--- a/TradeHubGui/Views/SendOrderWindow.xaml
+++ b/TradeHubGui/Views/SendOrderWindow.xaml
@@ -10,11 +10,11 @@
                  WindowStartupLocation="CenterOwner"
                  Title="Send Order"
                  SizeToContent="WidthAndHeight"
-                 MinWidth="580" MinHeight="460">
+                 MinWidth="550" MinHeight="480">
     <mah:MetroWindow.Resources>
         <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
     </mah:MetroWindow.Resources>
-    
+
     <Grid Grid.IsSharedSizeScope="True" Background="White" VerticalAlignment="Center" MaxWidth="800">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -30,20 +30,30 @@
         <TextBlock Margin="22,10,0,0" Text="{Binding OrderModel.Security.Symbol, FallbackValue=N/A}" TextAlignment="Center" MinWidth="72"
                        Style="{StaticResource HeaderTextBlockStyle}" FontWeight="Thin" FontSize="36"/>
 
-        <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Margin="0,10,22,0" Grid.Column="2">
-            <Border Padding="10,1,10,3" CornerRadius="3" VerticalAlignment="Top" Margin="0,20,0,0"
-                        Background="{Binding SelectedOrderExecutionProvider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" >
-                <TextBlock Text="{Binding SelectedOrderExecutionProvider.ConnectionStatus}"
-                               Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
-            </Border>
-        </StackPanel>
+        <Border Grid.Column="2" Padding="10,1,10,3" CornerRadius="3" VerticalAlignment="Top" Margin="0,30,20,0" HorizontalAlignment="Center"
+                    Background="{Binding SelectedOrderExecutionProvider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}, FallbackValue={StaticResource RedBrush}}" >
+            <TextBlock Text="{Binding SelectedOrderExecutionProvider.ConnectionStatus, FallbackValue=Disconnected}"
+                            Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+        </Border>
 
-        <StackPanel Grid.Row="0" Grid.Column="1" Margin="20,60,20,10">
+        <!--<Border Grid.ColumnSpan="3" VerticalAlignment="Bottom" BorderThickness="0,0,0,2" Margin="0,6,0,0"
+                BorderBrush="{Binding SelectedOrderExecutionProvider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}, FallbackValue={StaticResource RedBrush}}" />-->
+
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="20,60,20,20">
             <Label Content="Order execution provider" />
-            <ComboBox Name="MarketDataProvidersComboBox" FontWeight="Bold"
+            <ComboBox Name="MarketDataProvidersComboBox" FontWeight="Bold" Height="26"
                       ItemsSource="{Binding OrderExecutionProviders}" 
-                      SelectedItem="{Binding SelectedOrderExecutionProvider}"
-                      DisplayMemberPath="ProviderName"/>
+                      SelectedItem="{Binding SelectedOrderExecutionProvider}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel Margin="0,2">
+                            <TextBlock DockPanel.Dock="Left" Text="{Binding ProviderName}" VerticalAlignment="Center"/>
+                            <!--<TextBlock DockPanel.Dock="Left" Text="{Binding ConnectionStatus}" Foreground="{Binding ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" 
+                                        FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" Margin="0,0,0,2" HorizontalAlignment="Right" MinWidth="70"/>-->
+                        </DockPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
             
             <Grid Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
@@ -54,27 +64,27 @@
 
                 <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,10,0">
                     <Label Content="Type" />
-                    <ComboBox FontWeight="Bold" 
+                    <ComboBox FontWeight="Bold" Height="26"
                               ItemsSource="{Binding OrderTypesCollection}" 
                               SelectedItem="{Binding SelectedOrderType}"/>
                 </StackPanel>
-                
+
                 <StackPanel Grid.Column="2" Margin="10,0,0,0">
                     <Label Content="Trigger price"/>
-                    <wpfToolkitExtended:DecimalUpDown Value="{Binding OrderModel.TriggerPrice, FallbackValue=0}"  Minimum="0" Increment="0.01" FontWeight="Bold" />
+                    <wpfToolkitExtended:DecimalUpDown Value="{Binding OrderModel.TriggerPrice, FallbackValue=0}" Minimum="0" Increment="0.01" FontWeight="Bold" Height="26"/>
                 </StackPanel>
             </Grid>
         </StackPanel>
 
         <Border Grid.Row="1" Grid.ColumnSpan="3" Background="{StaticResource GrayBrush}" Opacity="0.15"/>
-        
+
         <Grid Grid.Row="1" Grid.Column="1" Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="90"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            
+
             <StackPanel Grid.Column="0" Margin="10">
                 <Label Content="Price"/>
                 <wpfToolkitExtended:DecimalUpDown Height="28" Value="{Binding OrderModel.BuyPrice, FallbackValue=0}" Minimum="0" Increment="0.01"
