(TH-177) Small cosmetic changes for Send Order window

--- a/TradeHubGui/Views/NewMarketScannerWindow.xaml
+++ b/TradeHubGui/Views/NewMarketScannerWindow.xaml
@@ -34,9 +34,9 @@
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <DockPanel Margin="0,2">
-                            <TextBlock DockPanel.Dock="Left" Text="{Binding ProviderName}" VerticalAlignment="Center"/>
-                            <TextBlock DockPanel.Dock="Left" Text="{Binding ConnectionStatus}" Foreground="{Binding ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" 
-                                        FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" Margin="0,0,0,2" HorizontalAlignment="Right" MinWidth="70"/>
+                            <TextBlock DockPanel.Dock="Right" Text="{Binding ConnectionStatus}" Foreground="{Binding ConnectionStatus, Converter={StaticResource ConnectionStatusToBrush}}" 
+                                    FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" Margin="0,0,0,2" FontSize="12"/>
+                            <TextBlock Text="{Binding ProviderName}" VerticalAlignment="Center"/>
                         </DockPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
